--- a/app/src/main/res/layout/activity_add_integrante.xml
+++ b/app/src/main/res/layout/activity_add_integrante.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1c8adb"
     tools:context=".AddIntegranteActivity">
 
     <RelativeLayout
@@ -15,9 +16,10 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:paddingBottom="20dp"
-        android:background="#26A69A"
+        android:background="#FFFF"
         >
         <ImageView
+            android:background="#1c8adb"
             android:id="@+id/img_LOGO"
             android:src="@drawable/logo"
             android:layout_width="match_parent"
@@ -26,6 +28,7 @@
             android:contentDescription="@string/app_name" />
 
         <android.support.design.widget.TextInputLayout
+            style="@style/StyledTilEditText"
             android:layout_below="@id/img_LOGO"
             android:id="@+id/txt_addEmail"
             android:layout_width="match_parent"
@@ -57,6 +60,7 @@
                 android:layout_below="@id/txt_input_nomeComodo"
                 android:textAllCaps="false"
                 android:text="Adicionar Integrante"
+                android:textColor="#FFFFFF"
                 android:background="@drawable/buttonshape"
                 android:layout_marginTop="10dp"
                 android:onClick="addIntegranteBNT"/>
