--- a/app/src/main/res/layout/activity_grupo.xml
+++ b/app/src/main/res/layout/activity_grupo.xml
@@ -16,10 +16,11 @@
 
     <Button
         android:id="@+id/btn_cadastrar_grupo"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="131dp"
-        android:background="@drawable/group"
+        android:textColor="#FFFF"
+        android:background="@drawable/buttonshape"
         android:text="Cadastrar Grupo"
         android:textSize="15dp"
         android:textAllCaps="false"
