--- a/app/src/main/res/layout/list_group_layout.xml
+++ b/app/src/main/res/layout/list_group_layout.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:background="@drawable/borda_arredondada"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
@@ -12,18 +13,21 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:padding="8dp"
+            android:paddingBottom="8dp"
+            android:background="#1c8adb">
 
 
             <TextView
+                android:textColor="#FFFF"
                 android:id="@+id/textViewTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Grupo 1"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:textColor="#000000" />
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
 
             <TextView
+                android:textColor="#FFFF"
                 android:id="@+id/textViewShortDesc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
