--- a/app/src/main/res/layout/activity_atividade.xml
+++ b/app/src/main/res/layout/activity_atividade.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,7 +15,8 @@
             android:id="@+id/btn_cadastrar_atividade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/group"
+            android:background="@drawable/buttonshape"
+            android:textColor="#FFFF"
             android:text="Cadastrar Atividade"
             android:textSize="15dp"
             android:textAllCaps="false"
@@ -35,4 +36,4 @@
         </RelativeLayout>
 
     </RelativeLayout>
-</RelativeLayout>
+</ScrollView>
