--- a/app/src/main/res/layout/activity_atividade_detalhe.xml
+++ b/app/src/main/res/layout/activity_atividade_detalhe.xml
@@ -8,83 +8,95 @@
     android:layout_gravity="center"
     tools:context=".AtividadeDetalheActivity">
 
-    <TextView
-        android:text="Nome"
-        android:gravity="center"
-        android:layout_width="85dp"
-        android:textColor="#000000"
-        android:textAlignment="center"
-        android:layout_height="40dp" />
+    <RelativeLayout
+    android:layout_marginTop="50dp"
+    android:paddingBottom="50dp"
+    android:background="#FFFF"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/edtNomeAtividade"
-        android:layout_marginLeft="85dp"
-        android:layout_marginRight="10dp"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        <TextView
+            android:text="Nome"
+            android:gravity="center"
+            android:layout_width="85dp"
+            android:textColor="#000000"
+            android:textAlignment="center"
+            android:layout_height="40dp" />
 
-    <TextView
-        android:textAlignment="center"
-        android:gravity="center"
-        android:text="Descrição"
-        android:textColor="#000000"
-        android:layout_marginTop="50dp"
-        android:layout_width="85dp"
-        android:layout_height="40dp" />
+        <TextView
+            android:id="@+id/edtNomeAtividade"
+            android:layout_marginLeft="85dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
 
-    <TextView
-        android:layout_marginTop="50dp"
-        android:id="@+id/edtDescAtividade"
-        android:gravity="center"
-        android:layout_marginLeft="85dp"
-        android:layout_marginRight="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        <TextView
+            android:textAlignment="center"
+            android:gravity="center"
+            android:text="Descrição"
+            android:textColor="#000000"
+            android:layout_marginTop="50dp"
+            android:layout_width="85dp"
+            android:layout_height="40dp" />
 
-    <TextView
-        android:layout_marginTop="100dp"
-        android:textColor="#000000"
-        android:gravity="center"
-        android:text="Responsavel"
-        android:textAlignment="center"
-        android:layout_width="85dp"
-        android:layout_height="40dp" />
+        <TextView
+            android:layout_marginTop="50dp"
+            android:id="@+id/edtDescAtividade"
+            android:gravity="center"
+            android:layout_marginLeft="85dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
 
-    <TextView
-        android:layout_marginTop="100dp"
-        android:gravity="center"
-        android:id="@+id/edtResponsavelAtividade"
-        android:layout_marginLeft="85dp"
-        android:layout_marginRight="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+        <TextView
+            android:layout_marginTop="100dp"
+            android:textColor="#000000"
+            android:gravity="center"
+            android:text="Responsavel"
+            android:textAlignment="center"
+            android:layout_width="85dp"
+            android:layout_height="40dp" />
 
-    <TextView
-        android:layout_marginTop="150dp"
-        android:gravity="center"
-        android:background="@color/colorPrimary"
-        android:text="OBS"
-        android:textColor="#000000"
-        android:textAlignment="center"
-        android:layout_width="match_parent"
-        android:layout_height="40dp" />
+        <TextView
+            android:layout_marginTop="100dp"
+            android:gravity="center"
+            android:id="@+id/edtResponsavelAtividade"
+            android:layout_marginLeft="85dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
 
-    <EditText
-        android:shadowColor="@color/colorButtonSecondary"
-        android:id="@+id/edtObsAtividade"
-        android:layout_marginTop="190dp"
-        android:layout_width="match_parent"
-        android:textAlignment="center"
-        android:inputType="text"
-        android:hint="Obs para a tarefa..."
-        android:layout_height="90dp" />
+        <TextView
+            android:layout_marginTop="150dp"
+            android:gravity="center"
+            android:background="#1c8adb"
+            android:text="OBS"
+            android:textColor="#000000"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
 
-    <Button
-        android:id="@+id/btn_concluir_atividade"
-        android:layout_marginTop="280dp"
-        android:textAllCaps="false"
-        android:text="Concluir Atividade"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:shadowColor="@color/colorButtonSecondary"
+            android:id="@+id/edtObsAtividade"
+            android:layout_marginTop="190dp"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:inputType="text"
+            android:hint="Obs para a tarefa..."
+            android:layout_height="90dp" />
+
+        <Button
+            android:id="@+id/btn_concluir_atividade"
+            android:layout_marginTop="280dp"
+            android:textAllCaps="false"
+            android:background="@drawable/buttonshape"
+            android:text="Concluir Atividade"
+            android:textColor="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
 </RelativeLayout>
