--- a/app/src/main/res/layout/activity_cadastrar_atividade.xml
+++ b/app/src/main/res/layout/activity_cadastrar_atividade.xml
@@ -5,11 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1c8adb"
     tools:context=".CadastrarAtividadeActivity">
 
-
     <RelativeLayout
-        android:layout_marginTop="50dp"
+        android:layout_centerVertical="true"
+        android:paddingBottom="30dp"
+        android:background="#FFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -19,6 +21,7 @@
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TextInputLayout
+                style="@style/StyledTilEditText"
                 android:id="@+id/txt_input_nomeAtividade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -36,6 +39,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                style="@style/StyledTilEditText"
                 android:id="@+id/txt_input_descAtividade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -57,12 +61,13 @@
 
         <LinearLayout
             android:id="@+id/linear1"
-            android:layout_below="@+id/relative1"
+            android:layout_marginTop="130dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:textColor="#1c8adb"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="30dp"
                 android:layout_width="55dp"
@@ -71,6 +76,7 @@
                 />
 
             <Spinner
+                style="@style/StyledTilEditText"
                 android:id="@+id/spn_comodo"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
@@ -90,6 +96,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:textColor="#1c8adb"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="30dp"
                 android:layout_width="55dp"
@@ -98,6 +105,7 @@
                 />
 
             <Spinner
+                style="@style/StyledTilEditText"
                 android:id="@+id/spn_usuario"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
@@ -117,6 +125,8 @@
             android:layout_marginRight="30dp"
             android:textAllCaps="false"
             android:text="Cadastrar Atividade"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/buttonshape"
             android:layout_below="@id/linear2"
             android:onClick="cadastrarAtividade"/>
 
