--- a/app/src/main/res/layout/activity_gettingstarted.xml
+++ b/app/src/main/res/layout/activity_gettingstarted.xml
@@ -11,6 +11,16 @@
     tools:context=".GettingstartedActivity"
     android:background="@drawable/bg">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Let's Clean"
+        android:textSize="50dp"
+        android:textColor="#1c8adb"
+        android:textAlignment="center"
+        android:layout_marginTop="161dp"
+        />
+
     <ImageView
         android:id="@+id/imgLogo"
         android:layout_width="wrap_content"
@@ -25,9 +35,13 @@
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:background="@drawable/login_btn"
+        android:text="ENTRAR"
+        android:textSize="35dp"
+        android:textColor="#FFFF"
+        android:background="@drawable/buttonshape"
         android:layout_marginBottom="70dp"
         android:layout_alignParentBottom="true"
+        android:textAlignment="center"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -36,14 +50,13 @@
 
     <Button
         android:id="@+id/btnSingUP"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:textColor="#1c8adb"
+        android:text="SOBRE"
+        android:textSize="35dp"
         android:layout_height="60dp"
-        android:background="@drawable/singup_btn"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
+        android:background="@drawable/buttonshape2"
+        android:layout_marginTop="570dp"
         android:onClick="sobre"/>
 
 </RelativeLayout>
