--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    android:background="@drawable/bg_login"
+    android:background="#1c8adb"
     tools:context=".LoginActivity">
 
     <ImageView
@@ -22,18 +22,20 @@
         android:contentDescription="@string/logo_img_st" />
 
     <RelativeLayout
+        android:background="#FFFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/imgLogo"
         android:layout_marginTop="70dp"
-        android:paddingBottom="70dp"
+        android:paddingBottom="30dp"
         >
         <android.support.design.widget.TextInputLayout
+            style="@style/StyledTilEditText"
             android:id="@+id/txt_input_emailLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             app:errorEnabled="true">
@@ -56,11 +58,12 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            style="@style/StyledTilEditText"
             android:id="@+id/txt_input_senhaLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="90dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             app:errorEnabled="true"
@@ -89,7 +92,12 @@
             android:layout_marginTop="200dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/login_entrar_btn"
+            android:background="@drawable/buttonshape"
+            android:text="Entrar"
+            android:textColor="#FFFF"
+            android:textAllCaps="false"
+            android:textAlignment="center"
+            android:textSize="30dp"
             android:onClick="doLogin"/>
 
         <Button
@@ -99,7 +107,12 @@
             android:layout_marginTop="260dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/login_registar_btn"
+            android:background="@drawable/buttonshape2"
+            android:text="Inscreva-se"
+            android:textColor="#1c8adb"
+            android:textAllCaps="false"
+            android:textAlignment="center"
+            android:textSize="30dp"
             android:onClick="registrar"/>
 
     </RelativeLayout>
