--- a/app/src/main/res/layout/list_atividade_layout.xml
+++ b/app/src/main/res/layout/list_atividade_layout.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:background="@drawable/borda_arredondada"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
@@ -12,7 +13,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:padding="8dp"
+            android:paddingBottom="8dp"
+            android:background="#1c8adb">
 
 
             <TextView
@@ -21,16 +24,19 @@
                 android:layout_height="wrap_content"
                 android:text="atividade 1"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:textColor="#000000" />
+                android:textColor="#FFFF"
+                android:textSize="20dp"/>
 
             <TextView
                 android:layout_marginTop="30dp"
+                android:layout_marginLeft="10dp"
                 android:id="@+id/txtDesc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Desc Atividade"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:textColor="#000000" />
+                android:textColor="#FFFF"
+                android:textSize="15dp"/>
 
         </RelativeLayout>
 
