--- a/app/src/main/res/layout/list_comodo_layout.xml
+++ b/app/src/main/res/layout/list_comodo_layout.xml
@@ -7,21 +7,26 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:layout_marginTop="5dp"
+        android:paddingBottom="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp">
+            android:padding="8dp"
+            android:paddingBottom="8dp"
+            android:background="#1c8adb">
 
 
             <TextView
+                android:textColor="#FFFF"
+                android:textSize="20dp"
                 android:id="@+id/textViewTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="comodo 1"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:textColor="#000000" />
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
 
         </RelativeLayout>
 
