--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="StyledTilEditTextTheme">
+        <item name="colorControlNormal">#1c8adb</item>
+        // Cor padrão da linha
+        <item name="colorControlActivated">#1c8adb</item>
+        // Cor linha e texto quando recebe foco
+    </style>
+
+    <style name="StyledTilEditText">
+        <item name="android:theme">@style/StyledTilEditTextTheme</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:textColorHint">#1c8adb</item>
+        // Cor texto(hint) sem foco
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
